FORMS-736 : replacement de .isBlank() par la method isBlank de StringUtils